# python-package

./: README.md  pyproject.toml
.github/workflows/: Publish-to-PyPI.yml
src/my_package/: __init__.py
